# image-converter

./: CMakeLists.txt  README.md  cellProcessor.cpp  cellProcessor.h  gridWalker.cpp  gridWalker.h  imageReader.cpp  imageReader.h  main.cpp  presenter.cpp
